feat: harden application service tests for null id inputs